HNC-452: style and template updates/cleanup. page numbering fix on mobile

--- a/src/main/webapp/bundles/car/less/results.less
+++ b/src/main/webapp/bundles/car/less/results.less
@@ -288,6 +288,9 @@
 // Feature mode styling
 //
 .featuresMode {
+	.excess {
+		text-align: right;
+	}
 	.icon-tick {
 		color: @theme-secondary;
 	}
